--- a/xbox Game Pass.html
+++ b/xbox Game Pass.html
@@ -22,14 +22,15 @@
                 <ul>
                     <li><a href="xbox Game Studios.html">Xbox Game Studios</a></li>
                     <li><a href="xbox.html">Xbox</a></li>
-                    <li><a href="xbox leadership.html">Xbox Leadership</a></li>
+                    <li><a href="xbox Game Studios.html">Xbox Game Pass</a></li>
                 </ul>
             </nav>
 
             <main>
-                <h2 style="color: black;">About Xbox</h2>
-               <h3 style="color: black;"> 
-                   <a href="" >Click here</a> 
+                <h2 style="color: black;">Xbox Game Pass</h2>
+               <h3 style="color: black;"> Xbox Game Pass and PC Game Pass are video game subscription services from Microsoft. 
+                                            Both services grant users access to a rotating catalog of games from a range of publishers and other premium services, including Xbox Live Gold and EA Play, for a single monthly subscription price.
+                   <a href="https://en.wikipedia.org/wiki/Xbox_Game_Pass" >Click here</a> 
                </h3>
                <img src="images/" alt="" width="600">
             </main>
