--- a/xbox Game Studios.html
+++ b/xbox Game Studios.html
@@ -22,14 +22,15 @@
                 <ul>
                     <li><a href="xbox Game Studios.html">Xbox Game Studios</a></li>
                     <li><a href="xbox.html">Xbox</a></li>
-                    <li><a href="xbox leadership.html">Xbox Leadership</a></li>
+                    <li><a href="xbox Game Pass.html">Xbox Leadership</a></li>
                 </ul>
             </nav>
 
             <main>
                 <h2 style="color: black;">About Xbox</h2>
-               <h3 style="color: black;"> 
-                   <a href="" >Click here</a> 
+               <h3 style="color: black;"> Xbox Game Studios (previously known as Microsoft Studios, Microsoft Game Studios, and Microsoft Games) is an American video game publisher and part of the Microsoft Gaming division based in Redmond, Washington. 
+                                            It was established in March 2000, spun out from an internal Games Group, for the development and publishing of video games for Microsoft Windows. 
+                   <a href="https://en.wikipedia.org/wiki/Xbox_Game_Studios" >Click here</a> 
                </h3>
                <img src="images/" alt="" width="600">
             </main>
