--- a/xbox.html
+++ b/xbox.html
@@ -24,7 +24,7 @@
                 <ul>
                     <li><a href="xbox Game Studios.html">Xbox Game Studios</a></li>
                     <li><a href="xbox.html">Xbox</a></li>
-                    <li><a href="xbox leadership.html">Xbox Leadership</a></li>
+                    <li><a href="xbox Game Pass.html">Xbox Game Pass</a></li>
                 </ul>
             </nav>
 
