--- a/xbox Game Pass.html
+++ b/xbox Game Pass.html
@@ -14,8 +14,8 @@
     </head>
         <body>  
             <header>
-                <img style="float: left; margin-right: 10px;" src="images/.png" alt="" width="78">
-                <h1 style="color: black;">Xbox</h1>
+                <img style="float: left; margin-right: 10px;" src="images/xbox_game_pass_logo.png" alt="" width="70">
+                <h1 style="color: black;">Xbox Game Pass</h1>
             </header>
 
             <nav>
@@ -28,11 +28,20 @@
 
             <main>
                 <h2 style="color: black;">Xbox Game Pass</h2>
-               <h3 style="color: black;"> Xbox Game Pass and PC Game Pass are video game subscription services from Microsoft. 
-                                            Both services grant users access to a rotating catalog of games from a range of publishers and other premium services, including Xbox Live Gold and EA Play, for a single monthly subscription price.
-                   <a href="https://en.wikipedia.org/wiki/Xbox_Game_Pass" >Click here</a> 
-               </h3>
-               <img src="images/" alt="" width="600">
+               <p2 style="color: black;"> 
+                        Xbox Game Pass and PC Game Pass are video game subscription services from Microsoft. 
+                        Both services grant users access to a rotating catalog of games from a range of publishers and other premium services, including Xbox Live Gold and EA Play, for a single monthly subscription price.
+                        Xbox Game Pass provides this service on Xbox Series X/S and Xbox One consoles, as well as Android, iOS, and iPadOS devices via Xbox Cloud Gaming, selected Samsung TVs via Xbox Cloud Gaming, while PC Game Pass provides the service to personal computers using Windows 11 and Windows 10 or MacOS with support for Xbox Cloud Gaming. 
+                        The service was launched on June 1, 2017, while Xbox Live Gold subscribers received priority access on May 24.
+                        <a href="https://en.wikipedia.org/wiki/Xbox_Game_Pass" >Click here</a> 
+               </p2>
+
+               <h2>About Game Pass</h2>
+               <img src="images/xbox_games.jpg" alt="" width="400">
+               <p></p>
+               <p2>Since its launch game pass has over 300 games and has over 25 million subscribers in 2023. They have many know games such as all the halo games, minecraft, skyrim and DOOM for example.</p2>
+               
+                <img src="images/" alt="" width="600">
             </main>
             <footer>    
                 <h3 style="color:black;">@2023 Xbox</h3>
