--- a/xbox Game Studios.html
+++ b/xbox Game Studios.html
@@ -14,25 +14,54 @@
     </head>
         <body>  
             <header>
-                <img style="float: left; margin-right: 10px;" src="images/.png" alt="" width="78">
-                <h1 style="color: black;">Xbox</h1>
+                <img style="float: left; margin-right: 10px;" src ="images/Xbox_Game_Studios.svg" alt="" width="78">
+                <h1 style="color: black;">Xbox Game Studios</h1>
             </header>
 
             <nav>
                 <ul>
                     <li><a href="xbox Game Studios.html">Xbox Game Studios</a></li>
                     <li><a href="xbox.html">Xbox</a></li>
-                    <li><a href="xbox Game Pass.html">Xbox Leadership</a></li>
+                    <li><a href="xbox Game Pass.html">Xbox Game Pass</a></li>
                 </ul>
             </nav>
 
             <main>
-                <h2 style="color: black;">About Xbox</h2>
-               <h3 style="color: black;"> Xbox Game Studios (previously known as Microsoft Studios, Microsoft Game Studios, and Microsoft Games) is an American video game publisher and part of the Microsoft Gaming division based in Redmond, Washington. 
+                <h2 style="color: black;">About Xbox Game studios</h2>
+               <p2 style="color: black;"> Xbox Game Studios (previously known as Microsoft Studios, Microsoft Game Studios, and Microsoft Games) is an American video game publisher and part of the Microsoft Gaming division based in Redmond, Washington. 
                                             It was established in March 2000, spun out from an internal Games Group, for the development and publishing of video games for Microsoft Windows. 
                    <a href="https://en.wikipedia.org/wiki/Xbox_Game_Studios" >Click here</a> 
-               </h3>
-               <img src="images/" alt="" width="600">
+               </p2>
+               
+               <h2>List of xbox studios</h2>
+               <p2>Xbox has many game studios as of 2023. They have alot of ones they created themselves and have many that they brought over the years.</p2>
+               <p2>Here is a list of studios they created:</p2>
+               <div>
+                <ul>
+                  <li>343 Industries</li>
+                  <li>The Coalition</li>
+                  <li>Turn 10 Studios</li>
+                  <li>The Initiative</li>
+                </ul>
+              </div>
+
+              <p2>Here is a list of studios they brought:</p2>
+               <div>
+                <ul>
+                  <li>Rare</li>
+                  <li>Bethesda Game Studios</li>
+                  <li>Obsidian Entertainment</li>
+                  <li>Arkane Studios</li>
+                </ul>
+              </div>
+              <p></p>
+
+              <h2>343 Industries</h2>
+              <p2>Developer Bungie were acquired by Microsoft in 2000, and their in-development project Halo turned into a launch title for Microsoft's Xbox console. In 2007, shortly after shipping Halo 3, Bungie announced its split from Microsoft. The rights to Halo remained with the latter.
+                To oversee the Halo franchise, Microsoft created 343 Industries that same year, named after Halo character 343 Guilty Spark. Bungie continued making Halo games until Halo: Reach in 2010.</p2>
+                <a href="https://en.wikipedia.org/wiki/343_Industries" >Click here for more information.</a> 
+                    <p></p>
+                <img src="images/343_Industries.png" alt="" width="400">
             </main>
             <footer>    
                 <h3 style="color: black;">@2023 Xbox</h3>
