--- a/xbox.html
+++ b/xbox.html
@@ -4,22 +4,40 @@
 <head>
       <meta charset="utf-8">
        <title>Xbox</title>
-        <style>
-         body
-          {
-           background-color: white;
-          } 
 
+       <!--This puts a image up on the tab bar-->
+       <link rel="logo" type="image/xbox" href="/images/favicon.ico.png">
+
+       <!--font-family changes the text on the website to whatever you sent the font to -->
+        <style> 
+        
+        body 
+         {
+           background-image: url('images/background.jpg.png');
+         }
+
+        p.a 
+        {
+          font-family: "Times New Roman", Times, serif;
+        }
+
+       p.b 
+       {
+         font-family: Arial, Helvetica, sans-serif;
+       }
          </style>
+
+         <!--this links the style sheet to the main website-->
          <link rel="stylesheet" href="styles/style.css">
 
     </head>
         <body>  
+          <!--the <img style> lets you add a image as a logo on the website, it also let you position the image yourself-->
             <header>
                 <img style="float: left; margin-right: 10px;" src="images/xbox_logo.png" alt="" width="60">
                 <h1 style="color: black;">Xbox</h1>
             </header>
-
+              <!--the nav lets you connect your other webpages so you can add them on your main page and move between them-->
             <nav>
                 <ul>
                     <li><a href="xbox Game Studios.html">Xbox Game Studios</a></li>
@@ -30,16 +48,59 @@
 
             <main>
                 <h2 style="color: black;">About Xbox</h2>
-                <h3 style="color: black;"> 
+                <p2 style="color: black;"> 
                   Xbox is a video gaming brand created and owned by Microsoft. 
                   The brand consists of five video game consoles, as well as applications (games), streaming services, an online service by the name of Xbox network, and the development arm by the name of Xbox Game Studios.
                   <a href="https://en.wikipedia.org/wiki/Xbox#:~:text=Xbox%20is%20a%20video%20gaming,name%20of%20Xbox%20Game%20Studios." >Click here</a> 
-                </h3>
+                </p2>
 
-               <img src="images/" alt="" width="600">
+                <h2>Xbox Leadership</h2>
+                <p2>
+                    The Leadership in Xbox is divided up into different seqments as the company is too big to be managed by one person.
+                    Phil Spencer is an American business executive and the CEO of Microsoft Gaming. 
+                    He is currently the head of the Xbox brand and leads the global creative and engineering teams responsible for gaming at Microsoft.                    
+                </p2>
+
+                <p2>
+                    Matt Booty is head of Xbox Game Studios and oversees all first-party games output for Microsoft, 
+                    from studios including Rare, Turn 10 and Mojang.
+                </p2>
+
+                <p></p>
+
+                <p2>This is the map of the Microsoft Corp building.</p2>
+                <p></p>
+
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d85972.38203241328!2d-122.17073538560777!3d47.67204903850155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54900cad2000ee23%3A0x5e0390eac5d804f2!2sRedmond%2C%20WA%2C%20USA!5e0!3m2!1sen!2sie!4v1680009676818!5m2!1sen!2sie" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                <h2>The History of Xbox</H2>
+                  <p2>Microsoft Corporation created Xbox, a video game console system. Released in 2001, Xbox was Microsoft's first entry into the world of console electronic gaming, 
+                      which placed it in direct competition with Sony's PlayStation 2 and Nintendo's GameCube. </p2>
+                      <p2>Concerned about Sony’s successful PlayStation console damaging the personal computer market, Microsoft initiated plans in 1999 to create its own console gaming system to both diversify its product line and capitalize on the thriving gaming industry. 
+                        The system—originally termed the DirectX-box for its use of the eponymous video software—underwent multiple launch delays and several pricing adjustments after it made its debut. 
+                        Despite popular titles such as Halo: Combat Evolved and Halo 2, Microsoft reported in 2005 that it had thus far lost $4 billion from the Xbox enterprise.</p2>
+
+                      <a href="https://www.britannica.com/technology/Xbox">Click here</a> 
+                      <p></p>
+
+                      <p2>Here is a list of some of the games the xbox Released with the first xbox:</p2>
+                      <ol>
+                        <li>Halo combat envolved</li>
+                        <li>Project Gotham Racing</li>
+                        <li>Fuzion Frenzy</li>
+                        <li>Amped: FreeStyle Snowboarding</li>
+                      </ol>
+                      <p></p>
+                      <p2>This is the original intro for the first xbox.</p2>
+
             </main>
+
             <footer>    
-                <h3 style="color: black;">@2023 Xbox</h3>
+                   <h3 style="color: black;">@2023 Xbox</h3>
           </footer>
+          
+                <iframe width="420" height="315"
+                  src="https://www.youtube.com/embed/oADANrDGhoQ">
+                </iframe>
         </body>
 </html>
